--- a/portfolio/assets/css/Style.css
+++ b/portfolio/assets/css/Style.css
@@ -71,18 +71,20 @@ a {
   margin: 20px 0;
 }
 
-.button--primary {
-  background-color: #27ae60;
+.button {
   color: white;
   padding: 12px 24px;
+}
+
+.button--primary {
+  background-color: #27ae60;
+
   border: none;
 }
 
 .button--secondary {
   margin-left: 20px;
   background-color: black;
-  color: white;
-  padding: 12px 24px;
   border: 1px solid #f2f2f2;
 }
 
@@ -103,15 +105,22 @@ a {
 }
 
 .about {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.about__heading {
+
+.section {
+  margin-top: 100px;
+  padding: 0 80px;
+}
+
+.section__heading {
   font-weight: 700;
   font-size: 48px;
   color: white;
+  margin-bottom: 60px;
+  text-align: center;
 }
 .about__desc {
   font-weight: 400;
@@ -155,4 +164,54 @@ a {
   font-size: 18px;
   color: white;
   margin-top: 16px;
+}
+
+.feature__list {
+  list-style: none;
+  display: flex;
+  gap: 100px;
+}
+
+.feature__items {
+  background-color: #212121;
+  padding: 40px 60px;
+  width: 360px;
+}
+
+.feature__items p {
+  font-weight: 500;
+  font-size: 36px;
+  color: #535353;
+  margin-top: 30px;
+}
+
+.feature__item--highlight {
+  border-bottom: 8px solid #27ae60;
+}
+
+
+.skill__list{
+  list-style: none;
+  display: flex;
+  background-color: #212121;
+  padding: 40px 0;
+}
+
+.skill__items{
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.skill__items span{
+  font-weight: 700;
+  font-size: 72px;
+  color: #4F4F4F;
+}
+
+.skill__items p{
+  font-weight: 700;
+  font-size: 24px;
+  color: #27ae60;
+  text-transform: uppercase;
 }
