--- a/portfolio/assets/css/Style.css
+++ b/portfolio/assets/css/Style.css
@@ -19,8 +19,9 @@
   display: flex;
   align-items: center;
 }
-.hamburger{
+.hamburger {
   display: none;
+  cursor: pointer;
 }
 body {
   background-color: #171717;
@@ -330,7 +331,6 @@ footer p {
   .skill__items p {
     font-size: 20px;
   }
-  
 }
 /* mobile */
 
@@ -339,66 +339,103 @@ footer p {
     width: 250px;
     height: 250px;
   }
- .header__logo{
-  font-size: 34px;
-  font-weight: 500;
- }
- .hamburger{
-  width: 60px;
-  height: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
- }
- .hamburger__item{
-  width: 100%;
-  height: 5px;
-  background-color: white;
- }
- .nav{
-  display: none;
- }
- .container{
-  padding: 0 20px;
- }
- .banner__heading{
-  font-size: 40px;
- }
- .about__desc{
-  font-size: 15px;
-  margin-top: 10px;
-  width: 540px;
- }
- .about__item span{
-  font-size: 15px;
- }
- .feature__list {
-  flex-direction: column;
-}
- .feature__items {
-  max-width: 100%;
-}
-.skill__items span {
-  font-size: 35px;
-}
-.skill__items p {
-  font-size: 20px;
-}
-.about__list {
-  display: flex;
-  gap: 20px;
-}
-.contact__list{
-  width: 500px;
-}
-.contact__textarea{
-  margin-top: 20px;
-  width: 550px;
-}
-.section__heading h3{
-  font-size: 35px;
-}
-}
+  .header__logo {
+    font-size: 34px;
+    font-weight: 500;
+  }
+  .hamburger {
+    display: block;
+  }
+  .hamburger__item1,
+  .hamburger__item2,
+  .hamburger__item3 {
+    width: 25px;
+    height: 3px;
+    background-color: rgb(226, 226, 226);
+    margin: 5px;
+    transition: all 0.3s ease;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  .nav__list {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: #171717;
+    display: flex;
+    flex-direction: column;
+    row-gap: 160px;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .nav__item {
+    opacity: 0;
+  }
+  .nav-active {
+    transform: translateX(0%);
+  }
 
-
-
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+  .toggle .hamburger__item1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+  .toggle .hamburger__item2 {
+    opacity: 0;
+  }
+  .toggle .hamburger__item3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+  .container {
+    padding: 0 20px;
+  }
+  .banner__heading {
+    font-size: 40px;
+  }
+  .about__desc {
+    font-size: 15px;
+    margin-top: 10px;
+    width: 540px;
+  }
+  .about__item span {
+    font-size: 15px;
+  }
+  .feature__list {
+    flex-direction: column;
+  }
+  .feature__items {
+    max-width: 100%;
+  }
+  .skill__items span {
+    font-size: 35px;
+  }
+  .skill__items p {
+    font-size: 20px;
+  }
+  .about__list {
+    display: flex;
+    gap: 20px;
+  }
+  .contact__list {
+    width: 500px;
+  }
+  .contact__textarea {
+    margin-top: 20px;
+    width: 550px;
+  }
+  .section__heading h3 {
+    font-size: 35px;
+  }
+}
